# sparkmagic

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile.jupyter  Dockerfile.jupyter-all  Dockerfile.jupyter-datascience  Dockerfile.jupyter-minimal  Dockerfile.jupyter-pyspark  Dockerfile.jupyter-r  Dockerfile.jupyter-scipy  Dockerfile.jupyter-tensorflow  Dockerfile.spark  Dockerfile.sparkgpu  Dockerfile.tests  LICENSE  Pipfile  README.md  RELEASING.md  Untitled.ipynb  alti_deploy.sh  codecoverage.bat  codecoverage.sh  csrf.patch  deploy.sh  deploy_test.sh  docker-compose.yml  install.sh  inttest.sh  inttest_wrapper.sh  local_deploy.sh  nvidia-docker-compose.yml  pyproject.toml  requirements.txt  setup.py  snurran.sh
.github/: dependabot.yml  pull_request_template.md
autovizwidget/: README.md  requirements.txt  setup.py
autovizwidget3/: setup.py
examples/: CollectMagic_example.ipynb  Magics in IPython Kernel.ipynb  Multilang Notebook.ipynb  Pyspark Kernel.ipynb  Send local data to Spark.ipynb  Send+local+data+to+Spark+example.ipynb  Spark Kernel.ipynb  SparkGPU Kernel.ipynb  alti_thriftsql_demo.ipynb  remotespark.ipynb  spark_collect_magic_example.ipynb
hdijupyterutils/: LICENSE.md  README.md  example_config.json  requirements.txt  setup.py
hdijupyterutils3/: setup.py
helm/: Chart.yaml  values.yaml
remote_hivemetastore/: .gitignore  Manifest.txt  README.md  compile.sh  exce.sh  hive-site.xml  package.sh  run.sh  setup.py  verbose.sh
remotespark/: MessagePrinter.py  RemoteSparkMagics.py  log.py  (+13 more)
(+414 files in other folders)
